--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,16 @@ a {
     color: #0D1321;
 }
 
+.section-head {
+    text-align: center;
+}
+
+.section-title {
+    font-size: 32px;
+    color: #0D1321;
+    margin-bottom: 25px;
+}
+
 /* Header Section Style Start */
 
 /* Navbar Style */
@@ -70,7 +80,7 @@ nav {
 }
 
 .hero-content-container {
-    width: 55%;
+    width: 60%;
     margin: 0 auto;
 }
 
@@ -99,3 +109,66 @@ nav {
 }
 
 /* Header Section Style End */
+
+/* Main Section Style Start */
+main {
+    padding: 74px 0px;
+}
+
+/* Why Web Development Section */
+.why-web-development {
+    background-color: rgba(13, 19, 33, 0.050);
+    border-radius: 16px;
+    padding: 80px 95px;
+}
+
+.why-web-development .section-head {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.web-development-cards-container {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.web-development-card {
+    padding: 48px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.web-development-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.web-development-card-content {
+    width: 40%;
+}
+
+.web-development-card-content h4 {
+    font-size: 24px;
+    line-height: 36px;
+    color: #0D1321;
+    opacity: 70%;
+}
+
+.web-development-card-content p.paragraph {
+    margin: 16px 0px 32px;
+}
+
+.web-development-card-img {
+    width: 30%;
+    /* height: 240px; */
+}
+
+.web-development-card-img img {
+    width: 100%;
+    /* height: 100%; */
+}
+
+/* Main Section Style End */
