--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,8 @@ a {
 }
 
 .section-head {
+    width: 60%;
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -123,8 +125,7 @@ main {
 }
 
 .why-web-development .section-head {
-    width: 60%;
-    margin: 0 auto;
+
 }
 
 .web-development-cards-container {
@@ -169,6 +170,18 @@ main {
 .web-development-card-img img {
     width: 100%;
     /* height: 100%; */
+}
+
+/* My Inspiration Section Style */
+.my-inspiration {
+    margin: 90px 0px 100px;
+}
+
+.inspiration-video-container {
+    margin-top: 48px;
+    border: 2px solid rgba(13, 19, 33, 0.050);
+    padding: 32px;
+    border-radius: 16px;
 }
 
 /* Main Section Style End */
