--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@ nav {
 
 /* Main Section Style Start */
 main {
-    padding: 74px 0px;
+    padding: 75px 0px;
 }
 
 /* Why Web Development Section */
@@ -182,6 +182,50 @@ main {
     border: 2px solid rgba(13, 19, 33, 0.050);
     padding: 32px;
     border-radius: 16px;
+}
+
+/* My Current Target Section Style */
+.current-target-card-container {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 25px;
+}
+
+.current-target-card {
+    padding: 40px;
+    border-radius: 16px;
+}
+
+.current-target-card h4 {
+    font-size: 24px;
+    font-weight: 800;
+    color: #0D1321;
+    margin-top: 25px;
+}
+
+.current-target-card p {
+    margin: 10px 0px 20px;
+}
+
+.current-target-card a {
+    font-size: 16px;
+    font-weight: 700;
+    color: #0D1321;
+    text-decoration: underline;
+}
+
+.html-card {
+    background-color: rgba(255, 75, 30, 0.1);
+}
+
+.css-card {
+    background-color: rgba(0, 77, 232, 0.1);
+}
+
+.js-card {
+    background-color: rgba(255, 221, 0, 0.1);
 }
 
 /* Main Section Style End */
