--- a/styles/style.css
+++ b/styles/style.css
@@ -261,4 +261,53 @@ main {
     width: 100%;
 }
 
+/* Support Section Style */
+.support-section {
+    background: linear-gradient(to bottom, rgba(13, 19, 33, 0.3), rgba(13, 19, 33, 0.6)), url("../assets/handshake.jpg");
+    /* background-image: url("../assets/handshake.jpg"); */
+    background-position: center;
+    background-size: cover;
+    padding: 65px 50px;
+    border-radius: 16px;
+}
+
+.support-content {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.support-content .section-title {
+    color: #fff;
+}
+
+.support-content p.paragraph {
+    color: #fff;
+}
+
+.support-content form {
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.support-content input[type="text"] {
+    width: 70%;
+    padding: 20px;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    color: #0D1321;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.support-content form input.btn {
+    
+    color: #0D1321;
+    background-color: #fff;
+}
+
+
 /* Main Section Style End */
