--- a/styles/style.css
+++ b/styles/style.css
@@ -124,10 +124,6 @@ main {
     padding: 80px 95px;
 }
 
-.why-web-development .section-head {
-
-}
-
 .web-development-cards-container {
     margin-top: 50px;
     display: flex;
@@ -304,10 +300,31 @@ main {
 }
 
 .support-content form input.btn {
-    
     color: #0D1321;
     background-color: #fff;
 }
-
-
 /* Main Section Style End */
+
+/* Footer Section Style */
+
+footer {
+    padding: 32px;
+    background-color: rgba(13, 19, 33, 0.1);
+}
+
+.footer-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-text h5 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #0D1321;
+}
+
+.footer-social img {
+    margin-right: 10px;
+    cursor: pointer;
+}
